Исправил нерабочие feature тесты и исправил документацию в swagger'е у некоторых методов в AuthController.php
